--- a/data/debates/package.json
+++ b/data/debates/package.json
@@ -2,5 +2,8 @@
   "name": "@the-annotation-project/debate-data",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "echo 'No build'"
+  }
 }
