Add type annotations and exports

--- a/data/debates/package.json
+++ b/data/debates/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@the-annotation-project/debate-data",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/types.ts",
   "license": "MIT",
   "scripts": {
     "build": "echo 'No build'"
