--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,6 +4,23 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "echo no build step"
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "serve": "node dist/index.js"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.16",
+    "@types/uuid": "^9.0.8",
+    "express": "^4.18.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "minio": "^7.1.3",
+    "uuid": "^9.0.1"
   }
 }
